[Fix] Service 수정  #9